Update to add swagger endpoints for user and cookbook
